--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "frontend",
+  "name": "purrma-invest-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
+    "localstorage-slim": "^2.4.0",
     "next": "13.3.1",
+    "parse": "^4.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-gtm-module": "^2.0.11",
+    "react-loading": "^2.0.3",
+    "react-virtualized-auto-sizer": "^1.0.7",
+    "react-window": "^1.8.8",
+    "sharp": "^0.31.3",
+    "swr": "^2.1.0"
   },
   "devDependencies": {
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1"
+    "sass": "^1.62.0"
   }
 }
