--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.6.1",
+    "antd": "^5.4.6",
     "localstorage-slim": "^2.4.0",
     "next": "13.3.1",
     "parse": "^4.0.1",
