--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "chart.js": "^4.1.1",
-    "ethers": "^6.3.0",
-    "localstorage-slim": "^2.4.0",
     "next": "13.3.1",
     "parse": "^4.0.1",
     "react": "18.2.0",
@@ -18,10 +15,7 @@
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-loading": "^2.0.3",
-    "react-virtualized-auto-sizer": "^1.0.7",
-    "react-window": "^1.8.8",
-    "sharp": "^0.31.3",
-    "swr": "^2.1.0"
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "sass": "^1.62.0"
