--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "13.3.1",
+    "next": "^13.0.6",
     "parse": "^4.0.1",
     "react": "18.2.0",
     "react-chartjs-2": "^5.1.0",
