--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "aws-sdk": "^2.1404.0",
     "next": "^13.0.6",
     "parse": "^4.0.1",
     "react": "18.2.0",
