--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-loading": "^2.0.3",
-    "sharp": "^0.31.3"
+    "sharp": "^0.31.3",
+    "react-i18next": "^13.0.1",
+    "i18next": "^23.2.8"
   },
   "devDependencies": {
     "sass": "^1.62.0"
